--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Update '<title>'. -->
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <!-- 'Connect' JS to this HTML file. -->
-    <script src="./scripts.js"></script>
+    <div class="app-wrap">
+      <header>
+      <input type="text" autocomplete="off" class="search-box" placeholder="Search for a city..." />
+    </header>
+    <main>
+      <section class="location">
+        <div class="city">Northhampton, GB</div>
+        <div class="date">Tuesday 15 December 2020 </div>
+      </section>
+      <div class="current">
+        <div class="temp">15<span>°c</span></div>
+        <div class="weather">Sunny</div>
+        <div class="hi-low">13°c / 16°c</div>
+      </div>
+    </main>
+    </div>
+    <script src="main.js"></script>
   </body>
 </html>
